Fixed code alignment

--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,6 @@
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
 }
+.code {
+  text-align: initial !important;
+}
